workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_add_response_by_path_and_method_command__new_events.snap
---
source: workspaces/optic-engine-native/src/commands/endpoint.rs
expression: new_events
---
[
    ResponseAddedByPathAndMethod(
        ResponseAddedByPathAndMethod {
            response_id: "response_2",
            path_id: "path_1",
            http_method: "POST",
            http_status_code: 201,
            event_context: None,
        },
    ),
]
