workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_add_response_by_path_and_method_command__unexisting_path_result.snap
---
source: workspaces/optic-engine-native/src/commands/endpoint.rs
expression: unexisting_path_result.unwrap_err()
---
Validation(
    "Command failed validation: path component must exist to add response by path and method, \"AddResponseByPathAndMethod(AddResponseByPathAndMethod { response_id: \\\"response_2\\\", path_id: \\\"not-a-path\\\", http_method: \\\"POST\\\", http_status_code: 201 })\"",
)
